.prelude/i-effect/repos/tsgo/testdata/baselines/reference/effect-v4/classSelfMismatch_service.errors.txt
=== Metadata ===
Effect version: 4.0.0

/.src/classSelfMismatch_service.ts(10,48): error TS377046: The `Self` type parameter for this class should be `WrongName`. effect(classSelfMismatch)


==== /.src/classSelfMismatch_service.ts (1 errors) ====
    import { Context, Effect } from "effect"
    
    // @effect-expect-leaking FileSystem Cache
    export class CorrectName extends Context.Service<CorrectName, {
      writeCache: (key: string) => Effect.Effect<void, never, FileSystem | Cache>
      readCache: Effect.Effect<void, never, FileSystem | Cache>
    }>()("CorrectName") {}
    
    // @effect-expect-leaking FileSystem Cache
    export class WrongName extends Context.Service<CorrectName, {
                                                   ~~~~~~~~~~~
!!! error TS377046: The `Self` type parameter for this class should be `WrongName`. effect(classSelfMismatch)
      writeCache: (key: string) => Effect.Effect<void, never, FileSystem | Cache>
      readCache: Effect.Effect<void, never, FileSystem | Cache>
    }>()("WrongName") {}
    
